--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,1 +1,15 @@
-<%= render 'form', recipe: @recipe %>
+<%= form_for @recipe do | f | %>
+  <%= f.label "Title" %>
+  <%= f.text_field :title %><br>
+
+  <%= f.fields_for :ingredients do | ingr | %>
+    <%= ingr.label "Ingredient Name" %>
+    <%= ingr.text_field :name %>
+    
+    <%= ingr.label :quantity %>
+    <%= ingr.text_field :quantity %>
+  <% end %>
+
+  <%= f.submit %>
+
+<% end %>
